# oxidized-mcs

./: .gitignore  to_do.md
mcs/: Cargo.toml
mcs/src/: big_parse.rs  drastic_changes.rs  main.rs  mc_datatypes.rs  packet_crafter.rs  server.rs
mcs/src/controllers/: config.rs  handshake.rs  key_controller.rs  login.rs  mod.rs  play.rs  status.rs
mcs/src/help/: block.rs  ono.html  vector.rs
mcs/src/models/: block.rs  config.rs  entity.rs  mod.rs  player.rs  world.rs
mcs/src/packet/: mod.rs  packet_crafter.rs  packet_parser.rs
mcs/src/tests/: datatypes.rs
mcs/src/util/: block.rs  datatypes.rs  handshake_packet.rs  mod.rs  packet.rs  packet_crafter.rs  packet_parser.rs  vector.rs
