[package]
name = "mcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
anyhow = "1.0.87"
deflate = "1.0.0"
der = "0.7.8"
flate2 = "1.0.28"
flume = "0.11.0"
hematite-nbt = "0.5.2"
log = "0.4.21"
num-bigint = "0.4.4"
rand = "0.8.5"
regex = "1.10.3"
rsa = "0.9.6"
rustc-serialize = "0.3.25"
tokio = {version ="1", features = ["full"]}
